--- a/pages/countdown.html
+++ b/pages/countdown.html
@@ -2,89 +2,119 @@
 <html>
 <head>
   <title>Countdown Timer</title>
+  <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
   <style>
-    html {
-      background: url(https://cdn.pixabay.com/photo/2019/12/17/17/58/night-4702174_960_720.jpg) no-repeat center center fixed;
-      -webkit-background-size: cover;
-      -moz-background-size: cover;
-      -o-background-size: cover;
-      background-size: cover;
-    }
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      color: white;
-      width: 100%;
+    html, body {
       height: 100%;
       margin: 0;
-      padding: 0;
+      font-family: Arial, sans-serif;
+      background: url('') no-repeat center center fixed;
+      background-size: cover;
+      color: white;
+      text-align: center;
       display: flex;
-      align-items: flex-end;
-      justify-content: center;
-      padding-bottom: 20px;  /* add some space at the bottom of the page */
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
     }
     .countdown {
-      font-size: 11vw;
-      white-space: nowrap;
-      position: absolute;
-      bottom: 45px;
-      text-shadow: 8px 8px 50px black;
+      position: relative;
+      padding: 10px;
+      border-radius: 10px;
+      margin-bottom: 20px;
+      text-shadow: 3px 3px 10px rgba(0, 0, 0, 0.8);
+      cursor: move;
+      overflow: auto;
+      user-select: none;
+      display: inline-block;
+      font-size: 5em;
+    }
+    #sizeSlider {
+      width: 300px;
+      margin-bottom: 20px;
+    }
+    .center-btns {
+      margin-bottom: 10px;
     }
   </style>
 </head>
 <body>
-  <div class="countdown" id="countdown">
-    ...
+  <div class="center-btns">
+    <button id="centerHorizontally">Center Horizontally</button>
+    <button id="centerVertically">Center Vertically</button>
   </div>
+  <input type="range" min="2" max="10" value="5" class="slider" id="sizeSlider">
+  <div class="countdown" id="countdown">...</div>
   <script>
-    // Set the date we're counting down to
+    interact('.countdown')
+      .draggable({
+        onmove: function (event) {
+          var target = event.target;
+          var x = (parseFloat(target.getAttribute('data-x')) || 0) + event.dx;
+          var y = (parseFloat(target.getAttribute('data-y')) || 0) + event.dy;
+
+          target.style.transform = 'translate(' + x + 'px, ' + y + 'px)';
+          target.setAttribute('data-x', x);
+          target.setAttribute('data-y', y);
+        }
+      });
+
+    var countdown = document.getElementById('countdown');
+    var sizeSlider = document.getElementById('sizeSlider');
+    var centerHorizontallyBtn = document.getElementById('centerHorizontally');
+    var centerVerticallyBtn = document.getElementById('centerVertically');
+
+    sizeSlider.addEventListener('input', function() {
+      var newSize = sizeSlider.value;
+      countdown.style.fontSize = newSize + 'em';
+    });
+
+    centerHorizontallyBtn.addEventListener('click', function() {
+      countdown.style.textAlign = 'center';
+    });
+
+    centerVerticallyBtn.addEventListener('click', function() {
+      countdown.style.display = 'flex';
+      countdown.style.alignItems = 'center';
+      countdown.style.justifyContent = 'center';
+    });
+
+    // Countdown Timer
+    var countdownElement = document.getElementById("countdown");
     var countDownDate = new Date("Dec 31, 2023 23:59:59").getTime();
 
-    // Update the count down every 1 second
     var x = setInterval(function() {
-
-      // Get today's date and time
       var now = new Date().getTime();
-
-      // Find the distance between now and the count down date
       var distance = countDownDate - now;
 
-      // Time calculations for days, hours, minutes, and seconds
       var days = Math.floor(distance / (1000 * 60 * 60 * 24));
       var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
       var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
       var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
-      // Display the result in the element with id="countdown"
       var countdownString = "";
       if (days > 0) {
         countdownString += days + "d ";
         countdownString += (hours < 10 ? "0" + hours : hours) + "h ";
         countdownString += (minutes < 10 ? "0" + minutes : minutes) + "m ";
-        countdownString += (seconds < 10 ? "0" + seconds : seconds) + "s ";
+        countdownString += (seconds < 10 ? "0" + seconds : seconds) + "s";
       } else if (hours > 0) {
         countdownString += (hours < 10 ? "0" + hours : hours) + "h ";
         countdownString += (minutes < 10 ? "0" + minutes : minutes) + "m ";
-        countdownString += (seconds < 10 ? "0" + seconds : seconds) + "s ";
+        countdownString += (seconds < 10 ? "0" + seconds : seconds) + "s";
       } else if (minutes > 0) {
         countdownString += (minutes < 10 ? "0" + minutes : minutes) + "m ";
-        countdownString += (seconds < 10 ? "0" + seconds : seconds) + "s ";
+        countdownString += (seconds < 10 ? "0" + seconds : seconds) + "s";
       } else if (seconds > 0) {
-        countdownString += (seconds < 10 ? "0" + seconds : seconds) + "s ";
+        countdownString += (seconds < 10 ? "0" + seconds : seconds) + "s";
       }
 
-      document.getElementById("countdown").innerHTML = countdownString;
+      countdownElement.innerHTML = countdownString;
 
-      // If the count down is finished, write some text
       if (distance < 0) {
         clearInterval(x);
-        document.getElementById("countdown").innerHTML = "🎆🚀🚀🎆";
+        countdownElement.innerHTML = "🎆🚀🚀🎆";
       }
-
-
-
-
-
     }, 1000);
   </script>
 </body>
