--- a/pages/gta6.html
+++ b/pages/gta6.html
@@ -38,7 +38,7 @@
   </div>
   <script>
     // Set the date we're counting down to
-    var countDownDate = new Date("Dec 26, 2022 18:12:00").getTime();
+    var countDownDate = new Date("Dec 5, 2023 14:00:00 UTC").getTime();
 
     // Update the count down every 1 second
     var x = setInterval(function() {
