--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple Link Page</title>
+</head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+    <h1>Welcome</h1>
+
+    <p>Why are you here?</p>
+
+    
+    <a href="pages/gta6.html" target="_blank">Visit Countdown</a>
 
 </body>
 </html>
