--- a/pages/gta6.html
+++ b/pages/gta6.html
@@ -11,6 +11,7 @@
     gtag('js', new Date());
     gtag('config', 'G-1ERGV7DCN1');
   </script>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <title>Countdown Timer</title>
   <style>
     html, body {
