--- a/pages/gta6.html
+++ b/pages/gta6.html
@@ -14,6 +14,8 @@
     gtag('config', 'G-1ERGV7DCN1');
   </script>
   <title>Countdown Timer</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+
   <style>
 
 @font-face {
