--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <p>Why are you here???</p>
 
     
-    <a href="pages/gta6.html" target="_blank">Visit Countdown</a>
+    <a href="pages/gta6.html" target="_blank">Visit Silvester Countdown</a>
+    <a href="pages/matrix/drawsomething.html" target="_blank">Visit Matrix Drawer</a>
+    <a href="pages/sizemessure.html" target="_blank">Visit Monitor Size Messure</a>
 
 </body>
 </html>
