--- a/pages/matrix/drawsomething.html
+++ b/pages/matrix/drawsomething.html
@@ -802,8 +802,8 @@ const App = {
       url: "",
       wledUrl: "",
       size: 10,
-      x: 16,
-      y: 16,
+      x: 11,
+      y: 11,
       timer: 0,
       fill: [],
       // 🎛️ Controls
@@ -827,7 +827,7 @@ const App = {
       loading: true,
       options: false,
       ignore: false,
-      demo: false,
+      demo: true,
     };
   },
   computed: {
