--- a/pages/matrix/drawsomething.html
+++ b/pages/matrix/drawsomething.html
@@ -824,8 +824,8 @@ const App = {
       copied: false,
       copiedFailed: false,
       // App state
-      loading: true,
-      options: false,
+      loading: false,
+      options: true,
       ignore: false,
       demo: true,
     };
